sandbox/output
TicketDispenserTest.java:23: error: cannot find symbol
        TicketDispenser ticketDispenser = new TicketDispenser(sequence);
                                                              ^
  symbol:   variable sequence
  location: class TicketDispenserTest
TicketDispenserTest.java:24: error: cannot find symbol
        TicketDispenser anotherTicketDispenser = new TicketDispenser(sequence);
                                                                     ^
  symbol:   variable sequence
  location: class TicketDispenserTest
2 errors
